Use Android-compatible file reads in Story regression tests